# badlang-vm

./: CMakeLists.txt  badlang-vm.c
bytecode/: bc.c  bc.h  tokens.h
stack/: stack-cell.h  vm-stack.c  vm-stack.h
